@@ -3,6 +3,10 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
   - Add -except to import options. This allows you to explicitly not clean a
     sub. (Dave Rolsky)
+  - Changed the code to no longer _require_ Class::MOP. If your class is not a
+    Moose class then we don't load Class::MOP. This was particularly
+    problematic for Moo classes. Using namespace::autoclean with a Moo class
+    "upgraded" it to be a Moose class. (Dave Rolsky)
 
 0.15      2013-12-14 17:47:21Z
   - update configure_requires checking in Makefile.PL, add CONTRIBUTING file
